# tensorflow-object-detection-Python-and-Cpp-

./: README.md
C++ inference/: CMakeLists.txt  main.cpp  tf_detector_example
train and inference by Python/: model.config
train and inference by Python/python_scipts/: tf_detect_img_new.py  video_detection.py  yolo_tf_converter.py
